# rusty_sender

./: .gitignore  Cargo.toml  LICENSE  readme.md
.github/workflows/: rust.yml
benches/: eps.rs
example_data/: other_events  windows_events
src/: batching.rs  main.rs
tests/: cli.rs
