[package]
name = "rusty_sender"
version = "2.5.0"
edition = "2024"

[dependencies]
syslog = "^6.0"
log = "^0.4.29"

[dev-dependencies]
criterion = "^0.8.1"
tempfile = "^3.23.0"
serial_test = "2.0"

[profile.dev]
opt-level = 1
debug = 1
incremental = true
codegen-units = 256

[profile.test]
debug = 1
incremental = true
codegen-units = 256
opt-level = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bench]]
name = "eps"
harness = false
